fix(home-css): add more space to bottom of footer on mobile

--- a/css/layout.css
+++ b/css/layout.css
@@ -314,7 +314,7 @@ html, body {
         align-items: center;
 
         gap: 0.25rem;
-        padding: 0.5rem 1rem;
+        padding: 1.5rem 1rem;
     }
 
     /* top footer row */
